# contact-dedupe

./: .gitignore  README.md  client_template.yaml  pyproject.toml  requirements.txt  run.py  sandbox.ipynb
common/: exceptions.py  final_files.py  logger.py  models.py  utils.py
contact_dedupe/: cli.py
contact_dedupe/common/: __init__.py  exceptions.py  final_files.py  logger.py  models.py  utils.py
contact_dedupe/dedupe/: __init__.py  cleaning.py  core.py  normalize.py
dedupe/: __init__.py  cleaning.py  core_dedupe.py  dsu.py  normalize.py  run_dedupe.py
tests/: tests.py
tests/data/: test.yaml
