[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contact-dedupe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicknames>=1.0.1",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
]

[tool.setuptools]
py-modules = ["run"]
packages = ["common", "dedupe"]

[project.scripts]
dedupe = "run:main"