[project]
name = "contact-dedupe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
    "nicknames>=1.0.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rapidfuzz>=3.14.5",
]

[project.scripts]
contact-dedupe = "contact_dedupe.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]